fixed first loading DocSearch jump

--- a/src/assets/css/_layout.scss
+++ b/src/assets/css/_layout.scss
@@ -36,6 +36,8 @@
 
 // DocSearch.
 .docspress-docsearch {
+  // Fix first loading search bar jump.
+  min-height: 42px;
   padding-right: 10px;
 
   > .DocSearch {
